--- a/index.html
+++ b/index.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>portfolio</title>
 </head>
 <body>
     <h1>Johnny</h1>
-    <p>Johnny</p>
-    <p>Johnny</p>
-    <p>Johnny</p>
-    <p>Johnny</p>
-    <p>Johnny</p>
 </body>
 </html>
