--- a/index.html
+++ b/index.html
@@ -1,8 +1,36 @@
 <html>
 <head>
     <title>portfolio</title>
+    <style>
+        body {
+            background-color: #1f1f1f; /* Light gray background */
+        }
+    </style>
 </head>
 <body>
-    <h1>Johnny</h1>
+    <div style="
+        width: 600px;
+        min-height: 100px;
+        background-color: #181818;
+        border-top: 2px solid #000000;
+        border-left: 2px solid #000000;
+        border-right: 2px solid #000000;
+        border-bottom: 3px solid #000000;
+        border-radius: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 50px auto 0;
+        padding: 20px;
+    ">
+        <div style="display: flex; align-items: center; margin-bottom: 20px;">
+            <img src="git.png" alt="Github Logo" style="width: 25px; height: 25px; border-radius: 50%; margin-right: 15px;">
+            <h1>Johnny</h1>
+        </div>
+        <p>Add your paragraphs here</p>
+        <p>You can add multiple lines like this</p>
+        <p>Each paragraph will be a new line</p>
+    </div>
 </body>
 </html>
