--- a/index.html
+++ b/index.html
@@ -18,19 +18,21 @@
         border-bottom: 3px solid #000000;
         border-radius: 15px;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
         align-items: center;
         margin: 50px auto 0;
         padding: 20px;
     ">
+<div style ="color: #9b9b9b;">
         <div style="display: flex; align-items: center; margin-bottom: 20px;">
             <img src="git.png" alt="Github Logo" style="width: 25px; height: 25px; border-radius: 50%; margin-right: 15px;">
             <h1>Johnny</h1>
         </div>
+    <div style="text-align: left;">
         <p>Add your paragraphs here</p>
         <p>You can add multiple lines like this</p>
         <p>Each paragraph will be a new line</p>
+    </div>
+</div>
     </div>
 </body>
 </html>
