--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
         }
     </style>
 </head>
+<script>var w = window.innerWidth;
+var h = window.innerHeight;</script>
 <body>
     <div style="
-        width: 600px;
+        width: w px;
         min-height: 100px;
         background-color: #181818;
         border-top: 2px solid #000000;
