--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <html>
+
 <head>
     <title>portfolio</title>
     <style>
         body {
-            background-color: #1f1f1f; /* Light gray background */
+            background-color: #1f1f1f;
+            /* Light gray background */
         }
     </style>
 </head>
-<script>var w = window.innerWidth;
-var h = window.innerHeight;</script>
+
 <body>
     <div style="
-        width: w px;
+        width: 600px;
         min-height: 100px;
         background-color: #181818;
         border-top: 2px solid #000000;
@@ -24,17 +25,102 @@ var h = window.innerHeight;</script>
         margin: 50px auto 0;
         padding: 20px;
     ">
-<div style ="color: #9b9b9b;">
-        <div style="display: flex; align-items: center; margin-bottom: 20px;">
-            <img src="git.png" alt="Github Logo" style="width: 25px; height: 25px; border-radius: 50%; margin-right: 15px;">
-            <h1>Johnny</h1>
+        <div style="color: #9b9b9b;">
+            <div style="display: flex; align-items: center; margin-bottom: 20px;">
+                <h1>Oliver Donnelly</h1>
+                <a href="https://github.com/Oliver-Donnelly"></a>
+                <img src="git.png" alt="Github Logo"
+                    style="width: 25px; height: 25px; border-radius: 50%; margin-right: 15px; margin-left: 15px;">
+                </a>
+            </div>
+            <div style="text-align: left;">
+                <p>Add your paragraphs here</p>
+                <p>You can add multiple lines like this</p>
+                <p>Each paragraph will be a new line</p>
+            </div>
         </div>
-    <div style="text-align: left;">
-        <p>Add your paragraphs here</p>
-        <p>You can add multiple lines like this</p>
-        <p>Each paragraph will be a new line</p>
     </div>
-</div>
+
+    <div style="
+        width: 600px;
+        min-height: 100px;
+        background-color: #181818;
+        border-top: 2px solid #000000;
+        border-left: 2px solid #000000;
+        border-right: 2px solid #000000;
+        border-bottom: 3px solid #000000;
+        border-radius: 15px;
+        display: flex;
+        align-items: center;
+        margin: 50px auto 0;
+        padding: 20px;
+    ">
+        <div style="color: #9b9b9b;">
+            <div style="display: flex; align-items: center; margin-bottom: 5px;">
+                <h1>Projects</h1>
+            </div>
+                <!-- start of both blocks -->
+            <div style="display: flex; justify-content: space-between;">
+                <!-- start of first block -->
+                <div style="text-align: left;">
+                    <div style="
+        width: 235px;
+        min-height: 235px;
+        background-color: #181818;
+        border-top: 2px solid #000000;
+        border-left: 2px solid #000000;
+        border-right: 2px solid #000000;
+        border-bottom: 3px solid #000000;
+        border-radius: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-start;
+        margin: 25px 10px 0 0;
+        padding: 20px;
+    ">
+                        <div style="display: flex; align-items: center; margin-bottom: 20px;">
+                            <p style="margin: 0; text-align: center; font-size: 135%;">
+                                Object Detection
+                            </p>
+                            <img src="python.png" alt="Python Logo"
+                                style="width: 12.5px; height: 12.5px; border-radius: 50%; margin-right: 15px; margin-left: 15px;">
+                        </div>
+                    </div>
+                </div>
+                <!-- end of first block -->
+                <div style="text-align: left;">
+                    <div style="
+        width: 235px;
+        min-height: 235px;
+        background-color: #181818;
+        border-top: 2px solid #000000;
+        border-left: 2px solid #000000;
+        border-right: 2px solid #000000;
+        border-bottom: 3px solid #000000;
+        border-radius: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-start;
+        margin: 25px 0 0 10px;
+        padding: 20px;
+    ">
+                        <div style="display: flex; align-items: center; margin-bottom: 20px;">
+                            <p style="margin: 0; text-align: center; font-size: 135%;">
+                                asd
+                            </p>
+                            <img src="python.png" alt="Python Logo"
+                                style="width: 12.5px; height: 12.5px; border-radius: 50%; margin-right: 15px; margin-left: 15px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
+     </div>
+     
+<!-- end of 2 blocks -->
     </div>
 </body>
+
 </html>
