added more icons

--- a/index.html
+++ b/index.html
@@ -56,9 +56,14 @@
         padding: 20px;
     ">
         <div style="color: #9b9b9b;">
+            <div style="display: flex; align-items: center; margin-bottom: 20px;">
             <div style="display: flex; align-items: center; margin-bottom: 5px;">
                 <h1>Projects</h1>
+                <img src="java.png" style="width: 25px; height: 25px; border-radius: 50%; margin-right: 10px; margin-left: 15px;">
+                <img src="python.png" style="width: 25px; height: 25px; border-radius: 50%; margin-right: 5px; margin-left: 5px;">
+                <img src="swift.png" style="width: 25px; height: 25px; border-radius: 50%; margin-right: 5px; margin-left: 5px;">
             </div>
+        </div>
                 <!-- start of both blocks -->
             <div style="display: flex; justify-content: space-between;">
                 <!-- start of first block -->
