--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                     <div style="
         width: 235px;
         min-height: 235px;
-        background-color: #181818;
+        background-image: url('objdec.png');
+        background-size: cover;
         border-top: 2px solid #000000;
         border-left: 2px solid #000000;
         border-right: 2px solid #000000;
