--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div style="color: #9b9b9b;">
             <div style="display: flex; align-items: center; margin-bottom: 20px;">
                 <h1>Oliver Donnelly</h1>
-                <a href="https://github.com/Oliver-Donnelly"></a>
-                <img src="git.png" alt="Github Logo"
-                    style="width: 25px; height: 25px; border-radius: 50%; margin-right: 15px; margin-left: 15px;">
+                <a href="https://github.com/Oliver-Donnelly">
+                    <img src="git.png" alt="Github Logo"
+                        style="width: 25px; height: 25px; border-radius: 50%; margin-right: 15px; margin-left: 15px;">
                 </a>
             </div>
             <div style="text-align: left;">
