--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <!-- start of both blocks -->
             <div style="display: flex; justify-content: space-between;">
                 <!-- start of first block -->
+                <a href="https://github.com/Oliver-Donnelly">
                 <div style="text-align: left;">
                     <div style="
         width: 235px;
@@ -94,6 +95,7 @@
                         </div>
                     </div>
                 </div>
+            </a>
                 <!-- end of first block -->
                 <div style="text-align: left;">
                     <div style="
