--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     ">
                         <div style="display: flex; align-items: center; margin-bottom: 20px;">
                             <p style="margin: 0; text-align: center; font-size: 135%;">
-                                Object Detection
+                                 Detection
                             </p>
                             <img src="python.png" alt="Python Logo"
                                 style="width: 12.5px; height: 12.5px; border-radius: 50%; margin-right: 15px; margin-left: 15px;">
