updated color and removed unterline of block

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <!-- start of both blocks -->
             <div style="display: flex; justify-content: space-between;">
                 <!-- start of first block -->
-                <a href="https://github.com/Oliver-Donnelly">
+                <a href="https://github.com/Oliver-Donnelly" style="text-decoration: none; color: inherit;">
                 <div style="text-align: left;">
                     <div style="
         width: 235px;
@@ -88,7 +88,7 @@
     ">
                         <div style="display: flex; align-items: center; margin-bottom: 20px;">
                             <p style="margin: 0; text-align: center; font-size: 135%;">
-                                 Detection
+                                Object Detection
                             </p>
                             <img src="python.png" alt="Python Logo"
                                 style="width: 12.5px; height: 12.5px; border-radius: 50%; margin-right: 15px; margin-left: 15px;">
