--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div style="display: flex; align-items: center; margin-bottom: 20px;">
                 <h1>Oliver Donnelly</h1>
                 <a href="https://github.com/Oliver-Donnelly">
-                    <img src="git.png" alt="Github Logo"
+                    <img src="git.png"
                         style="width: 25px; height: 25px; border-radius: 50%; margin-right: 15px; margin-left: 15px;">
                 </a>
             </div>
@@ -87,10 +87,10 @@
         padding: 20px;
     ">
                         <div style="display: flex; align-items: center; margin-bottom: 20px;">
-                            <p style="margin: 0; text-align: center; font-size: 135%;">
+                            <p style="margin: 0; text-align: center; font-size: 135; color:#ffffff; font-size: 135%;">
                                 Object Detection
                             </p>
-                            <img src="python.png" alt="Python Logo"
+                            <img src="python.png"
                                 style="width: 12.5px; height: 12.5px; border-radius: 50%; margin-right: 15px; margin-left: 15px;">
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                             <p style="margin: 0; text-align: center; font-size: 135%;">
                                 asd
                             </p>
-                            <img src="python.png" alt="Python Logo"
+                            <img src="python.png"
                                 style="width: 12.5px; height: 12.5px; border-radius: 50%; margin-right: 15px; margin-left: 15px;">
                         </div>
                     </div>
