--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         padding: 20px;
     ">
                         <div style="display: flex; align-items: center; margin-bottom: 20px;">
-                            <p style="margin: 0; text-align: center; font-size: 135; color:#ffffff; font-size: 135%;">
+                            <p style="margin: 0; text-align: center; font-size: 135; color:#000000; font-size: 135%;">
                                 Object Detection
                             </p>
                             <img src="python.png"
