--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         const yearsDifference = currentDate.getFullYear() - startDate.getFullYear();
         const monthDifference = currentDate.getMonth() - startDate.getMonth();
         const dayDifference = currentDate.getDate() - startDate.getDate();
-        
+
         let age;
         if (monthDifference < 0 || (monthDifference === 0 && dayDifference < 0)) {
             yearsFromJune2008 = yearsDifference - 1;
@@ -48,8 +48,10 @@
                 </a>
             </div>
             <div style="text-align: left;">
-                <p>I am <script>document.write(yearsFromJune2008);</script> years old.</p>
-                <p>I'm a software developer with a passion for creating efficient and innovative solutions.</p>
+                <p>I am currently a highschool student.
+                    <script>document.write(yearsFromJune2008);</script> years old.
+                </p>
+                <p>I am based in Connecticut</p>
                 <p>My expertise includes Java, Python, and Swift programming languages.</p>
             </div>
         </div>
@@ -71,19 +73,23 @@
     ">
         <div style="color: #9b9b9b;">
             <div style="display: flex; align-items: center; margin-bottom: 20px;">
-            <div style="display: flex; align-items: center; margin-bottom: 5px;">
-                <h1>Projects</h1>
-                <img src="java.png" style="width: 25px; height: 25px; border-radius: 50%; margin-right: 10px; margin-left: 15px;">
-                <img src="python.png" style="width: 25px; height: 25px; border-radius: 50%; margin-right: 5px; margin-left: 5px;">
-                <img src="swift.png" style="width: 25px; height: 25px; border-radius: 50%; margin-right: 5px; margin-left: 5px;">
+                <div style="display: flex; align-items: center; margin-bottom: 5px;">
+                    <h1>Projects</h1>
+                    <img src="java.png"
+                        style="width: 25px; height: 25px; border-radius: 50%; margin-right: 10px; margin-left: 15px;">
+                    <img src="python.png"
+                        style="width: 25px; height: 25px; border-radius: 50%; margin-right: 5px; margin-left: 5px;">
+                    <img src="swift.png"
+                        style="width: 25px; height: 25px; border-radius: 50%; margin-right: 5px; margin-left: 5px;">
+                </div>
             </div>
-        </div>
-                <!-- start of both blocks -->
+            <!-- start of both blocks -->
             <div style="display: flex; justify-content: space-between;">
                 <!-- start of first block -->
-                <a href="https://github.com/Oliver-Donnelly/Object-detection-python" style="text-decoration: none; color: inherit;">
-                <div style="text-align: left;">
-                    <div style="
+                <a href="https://github.com/Oliver-Donnelly/Object-detection-python"
+                    style="text-decoration: none; color: inherit;">
+                    <div style="text-align: left;">
+                        <div style="
         width: 235px;
         min-height: 235px;
         background-image: url('objdec.png');
@@ -100,16 +106,16 @@
         margin: 25px 10px 0 0;
         padding: 20px;
     ">
-                        <div style="display: flex; align-items: center; margin-bottom: 20px;">
-                            <p style="margin: 0; text-align: center; font-size: 135%;">
-                                Object Detection
-                            </p>
-                            <img src="python.png"
-                                style="width: 12.5px; height: 12.5px; border-radius: 50%; margin-right: 15px; margin-left: 15px;">
+                            <div style="display: flex; align-items: center; margin-bottom: 20px;">
+                                <p style="margin: 0; text-align: center; font-size: 135%;">
+                                    Object Detection
+                                </p>
+                                <img src="python.png"
+                                    style="width: 12.5px; height: 12.5px; border-radius: 50%; margin-right: 15px; margin-left: 15px;">
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
+                </a>
                 <!-- end of first block -->
                 <div style="text-align: left;">
                     <div style="
@@ -138,11 +144,45 @@
                     </div>
                 </div>
             </div>
-        </div> 
-     </div>
-     
-<!-- end of 2 blocks -->
+        </div>
+    </div>
+
+    <!-- end of 2 blocks -->
+
+    <!-- contact section -->
+    <div style="
+width: 600px;
+min-height: 100px;
+background-color: #181818;
+border-top: 2px solid #000000;
+border-left: 2px solid #000000;
+border-right: 2px solid #000000;
+border-bottom: 3px solid #000000;
+border-radius: 15px;
+display: flex;
+align-items: center;
+margin: 50px auto 0;
+padding: 20px;
+">
+        <div style="color: #9b9b9b; width: 100%;">
+            <div style="display: flex; align-items: center; margin-bottom: 20px;">
+                <h1>Contact me</h1>
+            </div>
+            <div style="text-align: left;">
+                <p>Email me at oliverdonnelly28@gmail.com</p>
+                <p>Or send me a message directly:</p>
+                <form action="https://api.web3forms.com/submit" method="POST" style="display: flex; flex-direction: column; align-items: center;">
+                    <input type="hidden" name="access_key" value="1b8eb20a-9f5c-49a0-95d6-1e9e608c4b44">
+                    <input type="text" id="fname" name="fname" placeholder="Your Name" style="background-color: #181818;width: 90%; height: 35px; font-size: 12pt; border: solid; border-color: #000000; border-radius: 6px; text-align: center; color: #9b9b9b; margin-bottom: 5px; margin-top: 10px;" required>
+                    <input type="email" id="email" name="email" placeholder="Your Email" style="background-color: #181818; width: 90%; height: 35px; font-size: 12pt; border: solid; border-color: #000000; border-radius: 6px; text-align: center; color: #9b9b9b; margin-bottom: 5px; margin-top: 5px;" required>
+                    <input type="text" id="msg" name="msg" placeholder="Your Message" style="background-color: #181818; width: 90%; height: 100px; font-size: 12pt; border: solid; border-color: #000000; border-radius: 6px; text-align: center; color: #9b9b9b; margin-bottom: 5px; margin-top: 5px;" required>
+                    <input type="submit" style="background-color: #181818; font-size: 12pt; border: solid; border-color: #000000; border-radius: 6px; text-align: center; color: #9b9b9b; margin-bottom: 5px; margin-top: 5px;">
+                </form>
+            </div>
+        </div>
+    </div>
+        </div>
+    </div>
     </div>
 </body>
-
 </html>
