--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <p>I am currently a highschool student.
                     <script>document.write(yearsFromJune2008);</script> years old.
                 </p>
-                <p>I am based in Connecticut</p>
-                <p>My expertise includes Java, Python, and Swift programming languages.</p>
+                <p>I am based in Connecticut.</p>
+                <p>I have experience in Java, Python, Swift, HTML, and Javascript.</p>
             </div>
         </div>
     </div>
@@ -173,9 +173,9 @@ padding: 20px;
                 <p>Or send me a message directly:</p>
                 <form action="https://api.web3forms.com/submit" method="POST" style="display: flex; flex-direction: column; align-items: center;">
                     <input type="hidden" name="access_key" value="1b8eb20a-9f5c-49a0-95d6-1e9e608c4b44">
-                    <input type="text" id="fname" name="fname" placeholder="Your Name" style="background-color: #181818;width: 90%; height: 35px; font-size: 12pt; border: solid; border-color: #000000; border-radius: 6px; text-align: center; color: #9b9b9b; margin-bottom: 5px; margin-top: 10px;" required>
+                    <input type="text" id="name" name="name" placeholder="Your Name" style="background-color: #181818;width: 90%; height: 35px; font-size: 12pt; border: solid; border-color: #000000; border-radius: 6px; text-align: center; color: #9b9b9b; margin-bottom: 5px; margin-top: 10px;" required>
                     <input type="email" id="email" name="email" placeholder="Your Email" style="background-color: #181818; width: 90%; height: 35px; font-size: 12pt; border: solid; border-color: #000000; border-radius: 6px; text-align: center; color: #9b9b9b; margin-bottom: 5px; margin-top: 5px;" required>
-                    <input type="text" id="msg" name="msg" placeholder="Your Message" style="background-color: #181818; width: 90%; height: 100px; font-size: 12pt; border: solid; border-color: #000000; border-radius: 6px; text-align: center; color: #9b9b9b; margin-bottom: 5px; margin-top: 5px;" required>
+                    <input type="text" id="message" name="message" placeholder="Your Message" style="background-color: #181818; width: 90%; height: 100px; font-size: 12pt; border: solid; border-color: #000000; border-radius: 6px; text-align: center; color: #9b9b9b; margin-bottom: 5px; margin-top: 5px;" required>
                     <input type="submit" style="background-color: #181818; font-size: 12pt; border: solid; border-color: #000000; border-radius: 6px; text-align: center; color: #9b9b9b; margin-bottom: 5px; margin-top: 5px;">
                 </form>
             </div>
